Update and rename application-question.yml to application-job.yml

--- a/application-job.yml
+++ b/application-job.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: QUESTION-SERVICE
+    name: JOB-SERVICE
   config:
     import: "optional:configserver:http//localhost:8084"
 
