--- a/application-review.yml
+++ b/application-review.yml
@@ -1,1 +1,27 @@
+server:
+  port: 8083
 
+spring:
+  application:
+    name: REVIEW-SERVICE
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  datasource:
+    url: jdbc:h2:file:./data/quiz
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+    show-sql: true
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
