--- a/application-company.yml
+++ b/application-company.yml
@@ -11,7 +11,7 @@ spring:
       path: /h2-console
 
   datasource:
-    url: jdbc:h2:file:./data/quiz
+    url: jdbc:h2:file:./data/company
     driver-class-name: org.h2.Driver
     username: sa
     password:
